v0.6.1beta added history of actions and undo, redo buttons